# imgs-tools

./: .gitignore  BUILD.md  Cargo.toml  Makefile  README.md  build.ps1  build.sh
.github/workflows/: build.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: converter.rs  lib.rs  template.rs  types.rs
crates/core/src/providers/: aliyun.rs  huawei.rs  mod.rs  qiniu.rs  tencent.rs  volcengine.rs
crates/core/tests/: conversion_integration_test.rs
crates/tauri-app/: Cargo.toml
crates/tauri-app/src/: lib.rs
crates/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/tauri-app/src-tauri/icons/: README.txt
crates/tauri-app/src-tauri/src/: lib.rs  main.rs
crates/tauri-app/src-ui/: index.html  package-lock.json  package.json
crates/tauri-app/src-ui/src/: App.tsx  index.css  types.ts
crates/tauri-app/src-ui/src/components/: ConvertPanel.tsx  FeaturePanel.tsx
tests/: urls.txt
