[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/tauri-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["xhyan"]
license = "MIT"

[workspace.dependencies]
# 核心库依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"

# CLI 依赖
clap = { version = "4.5", features = ["derive"] }
tabled = "0.15"

# GUI 依赖
tauri = { version = "2.0", features = [] }
