[package]
name = "imgs-tools-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for cloud image processing parameter conversion"
repository = "https://github.com/xhyan/imgs-tools"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
dirs = "5.0"

[dev-dependencies]
pretty_assertions = "1.4"
