[package]
name = "imgs-tools-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "imgs_tools_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
imgs-tools-core = { path = "../../core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
